# ComfyUI-ChatterBox-Turbo

./: LICENSE  README.md  __init__.py  nodes.py  patches.py  pyproject.toml  requirements.txt
